# Nexus

./: PRD.md
context-aware-app/: README.md  actions.json  ai_dev_guide.md  package-lock.json  package.json  postcss.config.js  settings.json  tailwind.config.js  test.md  vite.config.ts
context-aware-app/.github/workflows/: release.yml
context-aware-app/src/: App.css  App.tsx  index.css
context-aware-app/src-tauri/: Cargo.toml  tauri.conf.json
context-aware-app/src-tauri/capabilities/: default.json
context-aware-app/src-tauri/src/: ai.rs  extractor.rs  lib.rs  main.rs  router.rs  scanner.rs  scihub.rs  types.rs
context-aware-app/src/components/: ActionPopup.tsx  Settings.tsx  SmartMenu.tsx
context-aware-app/src/lib/: types.ts
tets/: 1.md  sts.py
