[package]
name = "trendradar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "context_aware_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
enigo = "0.3"
arboard = "3"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
opener = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tauri-plugin-autostart = "2"
single-instance = "0.3"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi", "handleapi", "processthreadsapi"] }
